--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/CRUDJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\kevinjimenez\\Documents\\NetBeansProjects\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar-1=C:\\Users\\Kevin Jimenez\\Documents\\NetBeansProjects\\mysql-connector-java-8.0.28\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=COM.CONTROLLER.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
